# ECE-473

./: README.md
final/: .map  Makefile.in  configure.ac  configure~
final/autom4te.cache/: output.3  requests
final/src/: .main.c.swp  Makefile.in  main.c
final/src/lcd/: lcd.c  lcd.h
final/src/twi/: twi.h
lab1/: compile_commands.json  main.c  main.elf  main.hex  main.lst  main.map  main.srec  makefile
lab2/: .main.c.swp  async_debounce.c  async_debounce.h  compile_commands.json  delay_cycles.S  delay_cycles.h  delay_debounce.c  delay_debounce.h  main.c  main.elf  main.hex  main.lst  main.map  main.srec  makefile  shift_debounce.c  shift_debounce.h
lab3/: Makefile.in  README.md  config.h.in  config.h.in~  configure~
lab3/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1
lab3/src/: Makefile.am  Makefile.in  main.c
lab3/src/lcd/: glyph.h
lab4/autom4te.cache/: output.1  requests  traces.0  traces.2
lab4/src/: Makefile.am  main.c
lab4/src/lcd/: glyph.c  lcd_config.h
lab4/src/twi/: twi.c  twi_config.h
lab6/: .elf  Makefile.am  Makefile.in
lab6/autom4te.cache/: requests  traces.1
lab6/src/: main.c
